# pyops

./: .env-example  .gitignore  README.md  pyproject.toml
docs/: assigment.md  controlled_process.md  harness.md  mono_agent.md  mono_agent_draft.ipynb  poc_review.md
poc/: cli.py  state.py  tools.py
poc/apps/a1_simple_script/: main.py
poc/apps/a2_dependencies/: main.py
poc/apps/a3_modular/: main.py
poc/apps/a3_modular/pipeline/: extract.py  load.py  report.py  transform.py
poc/apps/a4_server/: main.py
poc/apps/a5_configurable/: config.json  main.py
poc/apps/a6_problematic/: main.py  requirements.txt
poc/controlled_process/: __init__.py  pipeline.py  prompts.py
poc/harness/: __init__.py  cost_tracker.py  docker_utils.py  interface.py  metrics.py  report.py  runner.py  scoring.py  storage.py
poc/harness/validators/: __init__.py  a1_validator.py  a2_validator.py  a3_validator.py  a4_validator.py  a5_validator.py  a6_validator.py  base.py
poc/mono_agent/: __init__.py  agent.py  prompts.py
poc/multi_agent/: __init__.py  orchestrator.py  prompts.py  sub_agent.py
