[project]
name = "pyops"
version = "0.1.0"
description = "PhD POC: LLM-based Python app deployment comparison"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.0",
    "openai>=1.0",
    "httpx>=0.27",
    "python-dotenv>=1.2.2",
    "rich>=13.0",
    "litellm>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["poc"]

[project.scripts]
harness = "poc.cli:main"
